<resources>
    <string name="app_name">EasyCalc</string>
    <string name="action_settings">Settings</string>
    <string name="erase_to_the_left">\u232b</string>
    <string name="del">⟵</string>
    <string name="backspace">⇦</string>
    <string name="shift">⇧</string>
    <string name="undo">↺</string>
    <string name="redo">↻</string>
    <string name="x2">x²</string>
    <string name="sqr">√</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="sub">\u2212</string>
    <string name="add">+</string>
    <string name="log2">log₂ </string>
    <string name="p2x">2<sup><small>x</small></sup></string>
    <string name="pex">e<sup><small>x</small></sup></string>
    <string name="p10x">10<sup><small>x</small></sup></string>
    <string name="pxy">x<sup><small>y</small></sup></string>
    <string name="inv">1/x</string>
    <string name="pi">π</string>
    <string name="NA">NA</string>
    <string name="sum">∑</string>
</resources>
